--- a/index.html
+++ b/index.html
@@ -11,28 +11,23 @@
     <img src="imagens/cesae.png" width="100" alt="">
     <br>
     <br>
-    <a href="">Ir para o site oficial</a>
+    <a href="https://www.cesaedigital.pt/" target="_blank">Ir para o site oficial</a>
     <hr>
     <h1>Sobre o CESAE Digital</h1>
 
-        <span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolore porro laudantium, eaque cumque nesciunt quod soluta exercitationem dolores repellendus praesentium explicabo, rem pariatur consectetur animi quaerat, neque voluptatem molestiae at?</span>
-        <br>
-        <br>
-        <span>Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam, porro? Atque minima quae aspernatur consectetur incidunt animi corrupti? Corporis ad a illum autem? Sapiente corporis ratione adipisci, quasi ab facilis!</span>
-        <br>
-        <br>
-        <span>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut quos quis dolorem dolorum tempora cupiditate quaerat, quam ipsa placeat. Perspiciatis voluptatibus harum repudiandae, modi numquam explicabo voluptatem praesentium quisquam veritatis.</span>
-        <br>
-        <br>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolore porro laudantium, eaque cumque nesciunt quod soluta exercitationem dolores repellendus praesentium explicabo, rem pariatur consectetur animi quaerat, neque voluptatem molestiae at?</p>
+
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam, porro? Atque minima quae aspernatur consectetur incidunt animi corrupti? Corporis ad a illum autem? Sapiente corporis ratione adipisci, quasi ab facilis!</p>
+
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut quos quis dolorem dolorum tempora cupiditate quaerat, quam ipsa placeat. Perspiciatis voluptatibus harum repudiandae, modi numquam explicabo voluptatem praesentium quisquam veritatis.</p>
+ 
         <ul>
             <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut quos quis dolorem dolorum tempora cupiditate quaerat, quam ipsa placeat. Perspiciatis voluptatibus harum repudiandae, modi numquam explicabo voluptatem praesentium quisquam veritatis.</li>
             <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut quos quis dolorem dolorum tempora cupiditate quaerat, quam ipsa placeat. Perspiciatis voluptatibus harum repudiandae, modi numquam explicabo voluptatem praesentium quisquam veritatis.</li>
             <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut quos quis dolorem dolorum tempora cupiditate quaerat, quam ipsa placeat. Perspiciatis voluptatibus harum repudiandae, modi numquam explicabo voluptatem praesentium quisquam veritatis.</li>
         </ul>
-        <br>
         <h1>Natureza, atribuições e competências</h1>
-        <span>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Cum cumque sapiente magnam deserunt quos dolor doloribus! Similique officia corrupti sit quisquam magnam eos dolorem modi, illo molestiae sapiente deleniti saepe.</span>
-        <br>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Cum cumque sapiente magnam deserunt quos dolor doloribus! Similique officia corrupti sit quisquam magnam eos dolorem modi, illo molestiae sapiente deleniti saepe.</p>
         <ol>
             <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut quos quis dolorem dolorum tempora cupiditate quaerat, quam ipsa placeat. Perspiciatis voluptatibus harum repudiandae, modi numquam explicabo voluptatem praesentium quisquam veritatis.</li>
             <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut quos quis dolorem dolorum tempora cupiditate quaerat, quam ipsa placeat. Perspiciatis voluptatibus harum repudiandae, modi numquam explicabo voluptatem praesentium quisquam veritatis.</li>
