Added form and multimedia pages

--- a/index.html
+++ b/index.html
@@ -5,17 +5,32 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="shortcut icon" type="image/x-icon" href="/imagens/favicon_io/favicon-32x32.png">
 </head>
-<a>
 
+
+
+<header style="text-align: center;">
     <img src="imagens/cesae.png" width="100" alt="">
     <br>
     <br>
     <a href="https://www.cesaedigital.pt/" target="_blank">Ir para o site oficial</a>
+    <br>
+    <br>
+    <nav style="text-align: center;">
+        <a href="/multimedia.html">Multimédia</a> |
+        <a href="/form.html">Formulário</a>
+    </nav>
     <hr>
+</header>
+<main>
     <h1>Sobre o CESAE Digital</h1>
+        
+        <br>
+        <br>
 
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolore porro laudantium, eaque cumque nesciunt quod soluta exercitationem dolores repellendus praesentium explicabo, rem pariatur consectetur animi quaerat, neque voluptatem molestiae at?</p>
+        <div style="align-items: center" display="inline">
+        <textarea rows = "5" cols = "60">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolore porro laudantium, eaque cumque nesciunt quod soluta exercitationem dolores repellendus praesentium explicabo, rem pariatur consectetur animi quaerat, neque voluptatem molestiae at?</textarea></div>
 
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam, porro? Atque minima quae aspernatur consectetur incidunt animi corrupti? Corporis ad a illum autem? Sapiente corporis ratione adipisci, quasi ab facilis!</p>
 
@@ -29,7 +44,7 @@
         <h1>Natureza, atribuições e competências</h1>
         <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Cum cumque sapiente magnam deserunt quos dolor doloribus! Similique officia corrupti sit quisquam magnam eos dolorem modi, illo molestiae sapiente deleniti saepe.</p>
         <ol>
-            <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut quos quis dolorem dolorum tempora cupiditate quaerat, quam ipsa placeat. Perspiciatis voluptatibus harum repudiandae, modi numquam explicabo voluptatem praesentium quisquam veritatis.</li>
+            <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. <span style="background-color: red; color: white;">Aut quos quis dolorem dolorum tempora cupiditate quaerat, quam ipsa placeat.</span> Perspiciatis voluptatibus harum repudiandae, modi numquam explicabo voluptatem praesentium quisquam veritatis.</li>
             <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut quos quis dolorem dolorum tempora cupiditate quaerat, quam ipsa placeat. Perspiciatis voluptatibus harum repudiandae, modi numquam explicabo voluptatem praesentium quisquam veritatis.</li>
         </ol>
         <br>
@@ -39,8 +54,9 @@
         <img src="imagens/AEP.png" width="250" alt="">
         <br>
         <br>
+    </main>
+        <footer>
         <hr>
-
         <span>Desenvolvido por tomasalmeitha ;)</span>
         <br>
         <br>
@@ -50,5 +66,6 @@
         <img src="imagens/linked_logo.png" width="50" alt=""></a>
         <a href="https://www.youtube.com/user/CESAECanal" target="_blank">
         <img src="imagens/youtubelogo.png" width="50" alt=""></a>
+    </footer>
 </body>
 </html>
