--- a/form.html
+++ b/form.html
@@ -7,11 +7,12 @@
     <title>Document</title>
     <link rel="shortcut icon" type="image/x-icon" href="/imagens/favicon_io/favicon-32x32.png">
 </head>
+<link rel="stylesheet" href="styles.css">
 
 <body>
 
     <header style="text-align: center;">
-        <img src="imagens/cesae.png" width="100" alt="">
+        <img src="imagens/cesaelogo-removebg.png" width="100" alt="">
         <br>
         <br>
         <a href="https://www.cesaedigital.pt/" target="_blank">Ir para o site oficial</a>
