--- a/index.html
+++ b/index.html
@@ -6,12 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="shortcut icon" type="image/x-icon" href="/imagens/favicon_io/favicon-32x32.png">
+    <link rel="stylesheet" href="styles.css">
 </head>
 
 
 
 <header style="text-align: center;">
-    <img src="imagens/cesae.png" width="100" alt="">
+    <img src="imagens/cesaelogo-removebg.png" width="100" alt="">
     <br>
     <br>
     <a href="https://www.cesaedigital.pt/" target="_blank">Ir para o site oficial</a>
@@ -23,8 +24,9 @@
     </nav>
     <hr>
 </header>
+
 <main>
-    <h1>Sobre o CESAE Digital</h1>
+    <h1 class="SobreCESAE">Sobre o CESAE Digital</h1>
         
         <br>
         <br>
@@ -41,17 +43,19 @@
             <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut quos quis dolorem dolorum tempora cupiditate quaerat, quam ipsa placeat. Perspiciatis voluptatibus harum repudiandae, modi numquam explicabo voluptatem praesentium quisquam veritatis.</li>
             <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut quos quis dolorem dolorum tempora cupiditate quaerat, quam ipsa placeat. Perspiciatis voluptatibus harum repudiandae, modi numquam explicabo voluptatem praesentium quisquam veritatis.</li>
         </ul>
-        <h1>Natureza, atribuições e competências</h1>
+        <h1 class="CoisasCESAE">Natureza, atribuições e competências</h1>
         <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Cum cumque sapiente magnam deserunt quos dolor doloribus! Similique officia corrupti sit quisquam magnam eos dolorem modi, illo molestiae sapiente deleniti saepe.</p>
         <ol>
-            <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. <span style="background-color: red; color: white;">Aut quos quis dolorem dolorum tempora cupiditate quaerat, quam ipsa placeat.</span> Perspiciatis voluptatibus harum repudiandae, modi numquam explicabo voluptatem praesentium quisquam veritatis.</li>
+            <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut quos quis dolorem dolorum tempora cupiditate quaerat, quam ipsa placeat. Perspiciatis voluptatibus harum repudiandae, modi numquam explicabo voluptatem praesentium quisquam veritatis.</li>
             <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut quos quis dolorem dolorum tempora cupiditate quaerat, quam ipsa placeat. Perspiciatis voluptatibus harum repudiandae, modi numquam explicabo voluptatem praesentium quisquam veritatis.</li>
         </ol>
         <br>
-        <h2>Associados</h2>
+        <h2 class="Associados">Associados</h2>
         <br>
+        <div style="text-align: center;">
         <img src="imagens/IEFP.png" width="250" alt="">
         <img src="imagens/AEP.png" width="250" alt="">
+        </div>
         <br>
         <br>
     </main>
