--- a/multimedia.html
+++ b/multimedia.html
@@ -6,13 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="shortcut icon" type="image/x-icon" href="/imagens/favicon_io/favicon-32x32.png">
+    <link rel="stylesheet" href="styles.css">
 </head>
 
     
 <body>
 
     <header style="text-align: center;">
-        <img src="imagens/cesae.png" width="100" alt="">
+        <img src="imagens/cesaelogo-removebg.png" width="100" alt="">
         <br>
         <br>
         <a href="https://www.cesaedigital.pt/" target="_blank">Ir para o site oficial</a>
