--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="shortcut icon" type="image/x-icon" href="/imagens/favicon_io/favicon-32x32.png">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css" integrity="sha512-SzlrxWUlpfuzQ+pcUCosxcglQRNAq/DZjVsC0lE40xsADsfeQoEypE+enwcOiGjk/bSuGGKHEyjSoQ1zVisanQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="styles.css">
 </head>
 
@@ -19,8 +20,11 @@
     <br>
     <br>
     <nav style="text-align: center;">
-        <a href="/multimedia.html">Multimédia</a> |
-        <a href="/form.html">Formulário</a>
+        <a href="/multimedia.html;"><i class="fa-regular fa-camera-movie"></i>Multimédia  
+        </a> |  
+        <a href="/form.html">Formulário
+            <i class="fa-regular fa-envelope"></i>
+        </a>
     </nav>
     <hr>
 </header>
